# llvm-project

clang/include/clang/AST/: Decl.h  JSONNodeDumper.h  RecursiveASTVisitor.h  TextNodeDumper.h
clang/include/clang/Basic/: Attr.td  AttrDocs.td  Builtins.td  CodeGenOptions.h  DeclNodes.td  DiagnosticDriverKinds.td  DiagnosticSemaKinds.td
clang/include/clang/Driver/: Options.h  Options.td
clang/include/clang/Sema/: HLSLExternalSemaSource.h  Sema.h  SemaHLSL.h
clang/include/clang/Serialization/: ASTBitCodes.h
clang/lib/AST/: Decl.cpp  DeclBase.cpp  DeclPrinter.cpp  JSONNodeDumper.cpp  TextNodeDumper.cpp
clang/lib/CodeGen/: CGBuiltin.cpp  CGDecl.cpp  CGHLSLRuntime.cpp  CGHLSLRuntime.h  CodeGenModule.cpp  CodeGenModule.h
clang/lib/Driver/: CMakeLists.txt  Driver.cpp  DriverOptions.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  DirectX.cpp  DirectX.h  HLSL.cpp  HLSL.h
clang/lib/Frontend/: FrontendAction.cpp
clang/lib/Sema/: HLSLExternalSemaSource.cpp  SemaChecking.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  SemaHLSL.cpp  SemaTemplateInstantiateDecl.cpp
clang/lib/Serialization/: ASTCommon.cpp  ASTReaderDecl.cpp  ASTWriterDecl.cpp
clang/test/: lit.cfg.py
clang/test/AST/HLSL/: ast-dump-comment-root_sig.hlsl  pch_hlsl_root_sig.hlsl  root_sig.hlsl
clang/test/CodeGenHLSL/: validator_version.hlsl
clang/test/Driver/: dxil_target_profile.hlsl
clang/test/ParserHLSL/: root_sig_error.hlsl
clang/test/SemaHLSL/: shader_attr.hlsl  shader_type_attr.hlsl
clang/unittests/Driver/: ToolChainTest.cpp
llvm/: CMakeLists.txt
llvm/include/llvm/Analysis/: ScalarEvolution.h
llvm/include/llvm/Frontend/HLSL/: HLSLRootSignature.h
llvm/include/llvm/IR/: CMakeLists.txt  Intrinsics.td  IntrinsicsDXIL.td
llvm/include/llvm/Option/: OptTable.h
llvm/lib/Frontend/HLSL/: HLSLRootSignature.cpp
llvm/lib/Option/: OptTable.cpp
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/AutoDiff/: ActivityAnalysis.h  CApi.cpp  CMakeLists.txt  CacheUtility.h  Enzyme.cpp  EnzymeLogic.cpp  FunctionUtils.h  GradientUtils.h  InstructionBatcher.h  MustExitScalarEvolution.h  Utils.cpp
llvm/lib/Transforms/AutoDiff/TypeAnalysis/: TypeAnalysis.cpp
llvm/test/CodeGen/DirectX/: UAVMetadata.ll  cbuf.ll  dxil_ver.ll  dxil_ver_lib6x.ll
llvm/tools/llc/: CMakeLists.txt
llvm/unittests/Object/: DXContainerTest.cpp
llvm/utils/TableGen/: DXILEmitter.cpp
llvm/utils/enzyme-tblgen/: enzyme-tblgen.cpp
